# traefik

./: .gitignore  BUILD.bazel  WORKSPACE
acme/: BUILD.bazel
anonymize/: BUILD.bazel
api/: BUILD.bazel
autogen/genstatic/: BUILD.bazel
autogen/gentemplates/: BUILD.bazel
cluster/: BUILD.bazel
cmd/: BUILD.bazel
cmd/bug/: BUILD.bazel
cmd/convert/: BUILD.bazel
cmd/healthcheck/: BUILD.bazel
cmd/storeconfig/: BUILD.bazel
cmd/traefik/: BUILD.bazel
cmd/version/: BUILD.bazel
collector/: BUILD.bazel
config/: BUILD.bazel
config/static/: BUILD.bazel
examples/accessLog/: BUILD.bazel
h2c/: BUILD.bazel
healthcheck/: BUILD.bazel
hostresolver/: BUILD.bazel
integration/: BUILD.bazel
integration/helloworld/: BUILD.bazel
integration/try/: BUILD.bazel
ip/: BUILD.bazel
job/: BUILD.bazel
log/: BUILD.bazel
metrics/: BUILD.bazel
middlewares/: BUILD.bazel
middlewares/accesslog/: BUILD.bazel
middlewares/addprefix/: BUILD.bazel
middlewares/auth/: BUILD.bazel  oidc.go
middlewares/buffering/: BUILD.bazel
middlewares/chain/: BUILD.bazel
middlewares/circuitbreaker/: BUILD.bazel
middlewares/compress/: BUILD.bazel
middlewares/customerrors/: BUILD.bazel
middlewares/emptybackendhandler/: BUILD.bazel
middlewares/headers/: BUILD.bazel
middlewares/ipwhitelist/: BUILD.bazel
middlewares/maxconnection/: BUILD.bazel
middlewares/passtlsclientcert/: BUILD.bazel
middlewares/ratelimiter/: BUILD.bazel
middlewares/recovery/: BUILD.bazel
middlewares/redirect/: BUILD.bazel
middlewares/replacepath/: BUILD.bazel
middlewares/replacepathregex/: BUILD.bazel
middlewares/requestdecorator/: BUILD.bazel
middlewares/retry/: BUILD.bazel
middlewares/stripprefix/: BUILD.bazel
middlewares/stripprefixregex/: BUILD.bazel
middlewares/tracing/: BUILD.bazel
old/api/: BUILD.bazel
old/configuration/: BUILD.bazel
old/configuration/router/: BUILD.bazel
old/log/: BUILD.bazel
old/middlewares/: BUILD.bazel
old/middlewares/accesslog/: BUILD.bazel
old/middlewares/auth/: BUILD.bazel
old/middlewares/errorpages/: BUILD.bazel
old/middlewares/forwardedheaders/: BUILD.bazel
old/middlewares/pipelining/: BUILD.bazel
old/middlewares/redirect/: BUILD.bazel
old/middlewares/tracing/: BUILD.bazel
old/middlewares/tracing/datadog/: BUILD.bazel
old/middlewares/tracing/jaeger/: BUILD.bazel
old/middlewares/tracing/zipkin/: BUILD.bazel
old/ping/: BUILD.bazel
old/provider/: BUILD.bazel
old/provider/acme/: BUILD.bazel
old/provider/boltdb/: BUILD.bazel
old/provider/consul/: BUILD.bazel
old/provider/consulcatalog/: BUILD.bazel
old/provider/docker/: BUILD.bazel
old/provider/dynamodb/: BUILD.bazel
old/provider/ecs/: BUILD.bazel
old/provider/etcd/: BUILD.bazel
old/provider/eureka/: BUILD.bazel
old/provider/file/: BUILD.bazel
old/provider/kubernetes/: BUILD.bazel
old/provider/kv/: BUILD.bazel
old/provider/label/: BUILD.bazel
old/provider/marathon/: BUILD.bazel
old/provider/marathon/mocks/: BUILD.bazel
old/provider/mesos/: BUILD.bazel
old/provider/rancher/: BUILD.bazel
old/provider/rest/: BUILD.bazel
old/provider/zk/: BUILD.bazel
old/tls/: BUILD.bazel
old/tls/generate/: BUILD.bazel
old/types/: BUILD.bazel
ping/: BUILD.bazel
provider/: BUILD.bazel
provider/acme/: BUILD.bazel
provider/aggregator/: BUILD.bazel
provider/file/: BUILD.bazel
provider/label/: BUILD.bazel
provider/label/internal/: BUILD.bazel
provider/rest/: BUILD.bazel
responsemodifiers/: BUILD.bazel
rules/: BUILD.bazel
safe/: BUILD.bazel
server/: BUILD.bazel
server/cookie/: BUILD.bazel
server/middleware/: BUILD.bazel
server/router/: BUILD.bazel
server/service/: BUILD.bazel
server/uuid/: BUILD.bazel
testhelpers/: BUILD.bazel
tls/: BUILD.bazel
tls/generate/: BUILD.bazel
tracing/: BUILD.bazel
tracing/datadog/: BUILD.bazel
tracing/jaeger/: BUILD.bazel
tracing/zipkin/: BUILD.bazel
types/: BUILD.bazel
version/: BUILD.bazel
