load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/containous/traefik
gazelle(
    name = "gazelle",
    external = "external",
)

go_library(
    name = "go_default_library",
    srcs = ["generate.go"],
    importpath = "github.com/containous/traefik",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "traefik",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
