load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["anonymize.go"],
    importpath = "github.com/containous/traefik/anonymize",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/mitchellh/copystructure:go_default_library",
        "//vendor/github.com/mvdan/xurls:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "anonymize_config_test.go",
        "anonymize_doOnJSON_test.go",
        "anonymize_doOnStruct_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//acme:go_default_library",
        "//config/static:go_default_library",
        "//provider:go_default_library",
        "//provider/acme:go_default_library",
        "//provider/file:go_default_library",
        "//tls:go_default_library",
        "//types:go_default_library",
        "//vendor/github.com/containous/flaeg/parse:go_default_library",
        "//vendor/github.com/elazarl/go-bindata-assetfs:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
