load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "configuration.go",
        "context.go",
    ],
    importpath = "github.com/containous/traefik/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//config/static:go_default_library",
        "//old/configuration:go_default_library",
        "//old/middlewares/accesslog:go_default_library",
        "//old/provider/boltdb:go_default_library",
        "//old/provider/consul:go_default_library",
        "//old/provider/consulcatalog:go_default_library",
        "//old/provider/docker:go_default_library",
        "//old/provider/dynamodb:go_default_library",
        "//old/provider/ecs:go_default_library",
        "//old/provider/etcd:go_default_library",
        "//old/provider/eureka:go_default_library",
        "//old/provider/kubernetes:go_default_library",
        "//old/provider/marathon:go_default_library",
        "//old/provider/mesos:go_default_library",
        "//old/provider/rancher:go_default_library",
        "//old/provider/zk:go_default_library",
        "//ping:go_default_library",
        "//provider/file:go_default_library",
        "//provider/rest:go_default_library",
        "//tracing/datadog:go_default_library",
        "//tracing/jaeger:go_default_library",
        "//tracing/zipkin:go_default_library",
        "//types:go_default_library",
        "//vendor/github.com/containous/flaeg/parse:go_default_library",
    ],
)
