load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["collector.go"],
    importpath = "github.com/containous/traefik/collector",
    visibility = ["//visibility:public"],
    deps = [
        "//anonymize:go_default_library",
        "//config/static:go_default_library",
        "//log:go_default_library",
        "//old/configuration:go_default_library",
        "//vendor/github.com/mitchellh/hashstructure:go_default_library",
        "//version:go_default_library",
    ],
)
