load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["h2c.go"],
    importpath = "github.com/containous/traefik/h2c",
    visibility = ["//visibility:public"],
    deps = [
        "//log:go_default_library",
        "//vendor/golang.org/x/net/http/httpguts:go_default_library",
        "//vendor/golang.org/x/net/http2:go_default_library",
        "//vendor/golang.org/x/net/http2/hpack:go_default_library",
    ],
)
