load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["hostresolver.go"],
    importpath = "github.com/containous/traefik/hostresolver",
    visibility = ["//visibility:public"],
    deps = [
        "//log:go_default_library",
        "//vendor/github.com/miekg/dns:go_default_library",
        "//vendor/github.com/patrickmn/go-cache:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["hostresolver_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
