load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["job.go"],
    importpath = "github.com/containous/traefik/job",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/cenk/backoff:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["job_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/cenk/backoff:go_default_library"],
)
