load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "headers.go",
        "log.go",
        "response_modifier.go",
    ],
    importpath = "github.com/containous/traefik/responsemodifiers",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//log:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/unrolled/secure:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["response_modifier_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//config:go_default_library",
        "//middlewares/headers:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)
