load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "routine.go",
        "safe.go",
    ],
    importpath = "github.com/containous/traefik/safe",
    visibility = ["//visibility:public"],
    deps = [
        "//log:go_default_library",
        "//vendor/github.com/cenk/backoff:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "routine_test.go",
        "safe_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/cenk/backoff:go_default_library"],
)
