load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "roundtripper.go",
        "server.go",
        "server_configuration.go",
        "server_entrypoint.go",
        "server_signals.go",
        "server_signals_windows.go",
    ],
    importpath = "github.com/containous/traefik/server",
    visibility = ["//visibility:public"],
    deps = [
        "//cluster:go_default_library",
        "//config:go_default_library",
        "//config/static:go_default_library",
        "//h2c:go_default_library",
        "//ip:go_default_library",
        "//log:go_default_library",
        "//metrics:go_default_library",
        "//middlewares:go_default_library",
        "//middlewares/accesslog:go_default_library",
        "//middlewares/requestdecorator:go_default_library",
        "//middlewares/tracing:go_default_library",
        "//old/configuration:go_default_library",
        "//provider:go_default_library",
        "//responsemodifiers:go_default_library",
        "//safe:go_default_library",
        "//server/middleware:go_default_library",
        "//server/router:go_default_library",
        "//server/service:go_default_library",
        "//tls:go_default_library",
        "//tls/generate:go_default_library",
        "//tracing:go_default_library",
        "//tracing/datadog:go_default_library",
        "//tracing/jaeger:go_default_library",
        "//tracing/zipkin:go_default_library",
        "//types:go_default_library",
        "//vendor/github.com/armon/go-proxyproto:go_default_library",
        "//vendor/github.com/containous/alice:go_default_library",
        "//vendor/github.com/containous/mux:go_default_library",
        "//vendor/github.com/eapache/channels:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/xenolf/lego/acme:go_default_library",
        "//vendor/golang.org/x/net/http2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "server_configuration_test.go",
        "server_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//config:go_default_library",
        "//config/static:go_default_library",
        "//testhelpers:go_default_library",
        "//tls:go_default_library",
        "//vendor/github.com/containous/flaeg/parse:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
