load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "certificate.go",
        "certificate_store.go",
        "tls.go",
    ],
    importpath = "github.com/containous/traefik/tls",
    visibility = ["//visibility:public"],
    deps = [
        "//log:go_default_library",
        "//safe:go_default_library",
        "//tls/generate:go_default_library",
        "//vendor/github.com/patrickmn/go-cache:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["certificate_store_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//safe:go_default_library",
        "//vendor/github.com/patrickmn/go-cache:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)
