load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "carrier.go",
        "operation_name.go",
        "tracing.go",
    ],
    importpath = "github.com/containous/traefik/tracing",
    visibility = ["//visibility:public"],
    deps = [
        "//log:go_default_library",
        "//vendor/github.com/opentracing/opentracing-go:go_default_library",
        "//vendor/github.com/opentracing/opentracing-go/ext:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["operation_name_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
