load("@io_bazel_rules_go//go:def.bzl", "go_library")

genrule(
    name = "gen",
    outs = ["gen.go"],
    cmd = "mkdir static && $(location @com_github_containous_go_bindata//go-bindata) -pkg genstatic -nocompress -o $@ ./static/...",
    tools = ["@com_github_containous_go_bindata//go-bindata"],
)

go_library(
    name = "go_default_library",
    srcs = ["gen.go"],
    importpath = "github.com/containous/traefik/autogen/genstatic",
    visibility = ["//visibility:public"],
)
