load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["convert.go"],
    importpath = "github.com/containous/traefik/cmd/convert",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//old/log:go_default_library",
        "//old/types:go_default_library",
        "//vendor/github.com/BurntSushi/toml:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_binary(
    name = "convert",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
