load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["healthcheck.go"],
    importpath = "github.com/containous/traefik/cmd/healthcheck",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd:go_default_library",
        "//config/static:go_default_library",
        "//vendor/github.com/containous/flaeg:go_default_library",
    ],
)
